--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ name = "pypi"
 
 [packages]
 flask = "2.2.2"
+flask-marshmallow = "0.14.0"
 flask-sqlalchemy = "3.0.3"
 flask-migrate = "3.1.0"
 flask-restful = "0.3.9"
