--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ ipdb = "0.13.9"
 pytest = "7.1.3"
 faker = "14.2.0"
 sqlalchemy-serializer = "1.4.1"
+gunicorn = "*"
+marshmallow-sqlalchemy = "*"
 
 [requires]
 python_full_version = "3.8.10"
